<resources>
    <string translatable="false" name="custom_widget_update_action">com.sickmartian.quickreminderwidget.action.APPWIDGET_UPDATE</string>
    <string translatable="false" name="custom_bucket_widget_update_action">com.sickmartian.quickreminderwidget.action.APPWIDGET_UPDATEB</string>
    <string translatable="false" name="custom_values_widget_update_action">com.sickmartian.quickreminderwidget.action.APPWIDGET_UPDATEC</string>

    <string name="app_name">Quick Reminder Widget</string>
    <string name="reminder_created_for">Reminder set{0,choice,0#|1# for tomorrow|1&lt; for {1,date}} at {1,time}</string>
    <string name="reminder_deleted_for">Reminder{0,choice,0#|1# for tomorrow|1&lt; for {1,date}} at {1,time} deleted</string>

    <string name="reminder_edition_save">Save</string>
    <string name="reminder_edition_cancel">Cancel</string>
    <string name="reminder_note_field">Note</string>
    <string name="reminder_edition_title">Edit Alarm</string>
    <string name="reminder_not_created">The reminder could not be created</string>
    <string name="reminder_not_created_exists">A reminder already exists for this date and time</string>
    <string name="reminder_fused">Reminder fused with existing for this date and time</string>
    <string name="widget_edition_hours_label">Hours to show in widget:</string>
    <string name="widget_edition_every30_label">Use 30 minute increments:</string>
    <string name="widget_edition_notes_label">Ask for note after creation:</string>
    <string name="custom_values_label">Custom times</string>
    <string name="general_settings_label">General Settings</string>
    <string name="custom_values_disabled_label">Disable</string>
    <string name="custom_values_1_label">1 Minute</string>
    <string name="custom_values_5_label">5 Minutes</string>
    <string name="custom_values_10_label">10 Minutes</string>
    <string name="custom_values_15_label">15 Minutes</string>
    <string name="custom_values_20_label">20 Minutes</string>
    <string name="custom_values_25_label">25 Minutes</string>
    <string name="custom_values_30_label">30 Minutes</string>
    <string name="custom_values_35_label">35 Minutes</string>
    <string name="custom_values_40_label">40 Minutes</string>
    <string name="custom_values_45_label">45 Minutes</string>
    <string name="custom_values_60_label">1 Hour</string>
    <string name="custom_values_90_label">1 ½ Hours</string>
    <string name="custom_values_120_label">2 Hours</string>
    <string name="custom_values_180_label">3 Hours</string>
    <string name="custom_values_240_label">4 Hours</string>
    <string name="custom_values_360_label">6 Hours</string>
    <string name="custom_values_720_label">12 Hours</string>
    <string name="custom_values_1440_label">1 Day</string>
    <string name="custom_values_2880_label">2 Days</string>
    <string name="custom_values_disabled_label_short">NA</string>
    <string name="custom_values_1_label_short">1\'</string>
    <string name="custom_values_5_label_short">5\'</string>
    <string name="custom_values_10_label_short">10\'</string>
    <string name="custom_values_15_label_short">15\'</string>
    <string name="custom_values_20_label_short">20\'</string>
    <string name="custom_values_25_label_short">25\'</string>
    <string name="custom_values_30_label_short">30\'</string>
    <string name="custom_values_35_label_short">35\'</string>
    <string name="custom_values_40_label_short">40\'</string>
    <string name="custom_values_45_label_short">45\'</string>
    <string name="custom_values_60_label_short">1 h</string>
    <string name="custom_values_90_label_short">1½ hs</string>
    <string name="custom_values_120_label_short">2 hs</string>
    <string name="custom_values_180_label_short">3 hs</string>
    <string name="custom_values_240_label_short">4 hs</string>
    <string name="custom_values_360_label_short">6 hs</string>
    <string name="custom_values_720_label_short">12 hs</string>
    <string name="custom_values_1440_label_short">1D</string>
    <string name="custom_values_2880_label_short">2D</string>
    <string name="widget_configuration_title">Widget Settings</string>
    <string name="widget_configuration_hour_missing">Enter a value for the hours</string>
    <string name="widget_configuration_hour_invalid">Enter a valid number of hours</string>
    <string name="widget_configuration_hour_above_max">The value for hours is too big. Select up to 168 hours.</string>
    <string name="notification_label">Notifications</string>
    <string name="notification_vibrate_label">Vibrate:</string>
    <string name="notification_custom_label">Use custom notification:</string>
    <string name="notification_light_label">Use lights:</string>
    <string name="notification_sound_label">Custom Tone</string>
    <string name="alarm_content_note_title">Note: %1$s</string>
    <string name="alarm_content_creation_title">Scheduled: %1$s</string>
    <string name="reminder_in_the_past">This reminder is in the past, can\'t be saved</string>
    <string name="alarm_edition_delete">Delete</string>
    <string name="bucket_widget_noon_switch">Show noon:</string>
    <string name="bucket_widget_noon_value">Time for noon:</string>
    <string name="bucket_widget_morning_switch">Show morning:</string>
    <string name="bucket_widget_morning_value">Time for morning:</string>
    <string name="bucket_widget_evening_switch">Show evening:</string>
    <string name="bucket_widget_evening_value">Time for evening:</string>
    <string name="bucket_widget_night_switch">Show night:</string>
    <string name="bucket_widget_night_value">Time for night:</string>

    <string name="information_feedback_line_html">For feedback and questions email us at <a href="mailto:quick.reminder.widget@sickmartian.com">quick.reminder.widget@sickmartian.com</a></string>
    <string name="information_privacy_line_html">Check our privacy policy <a href="http://sickmartian.com/assets/Trackendar_Mobile_Privacy_Policy.pdf">following this link</a></string>
    <string name="information_icons_line_html">Action icons are <a href="https://www.google.com/design/icons/">material design icons</a></string>
    <string name="information_icons2_line_html">Parts of the application icon are by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></string>
    <string name="information_icons3_line_html">Time of Day widget icons by <a href="https://www.behance.net/mmiglesias">Marcela Iglesias</a></string>
    <string name="info_activity_label">About</string>
    <string name="quick_reminder_widget_label">Reminder List</string>
    <string name="bucket_widget_label">Time of day</string>
    <string name="alarm_edition_action">Edit</string>
    <string name="widget_edition_show_plus_label">Show \'Add\' button</string>
    <string name="custom_values_widget_label">Pronto</string>

    <string name="create_reminder_short_label">Create</string>
    <string name="create_reminder_long_label">Create Reminder</string>

    <string name="edit_shortcut_action_long">Edit reminder {0,choice,0#|0&lt;{1,date,short} @ }{1,time,short}</string>
    <string name="edit_shortcut_action_short">{0,choice,0#|0&lt;{1,date,short} @ }{1,time,short}</string>

    <string name="custom_snooze_label">Custom snooze</string>
    <string name="alarm_falls_into_dst">Alarm can\'t be created as it will fall under DST gap</string>
    <string name="reminder_channel_name">Reminders</string>
    <string name="reminder_channel_description">User set reminders</string>
</resources>
