<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/toolbar_appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true" >

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:contentInsetLeft="@dimen/toolbarInset"
                app:contentInsetStart="@dimen/toolbarInset"
                app:layout_scrollFlags="scroll|enterAlways"
                app:theme="@style/Toolbar"
                app:popupTheme="@style/ToolbarPopup">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            style="@style/MaterialContainer"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/notification_label"
                    android:text="@string/notification_label"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:id="@+id/notification_custom"
                    android:layout_marginTop="@dimen/sibling_big_horizontal_margin"
                    android:layout_below="@id/notification_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/notification_custom_label"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                    <Switch
                        android:id="@+id/custom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/notification_vibrate"
                    android:layout_marginTop="@dimen/sibling_horizontal_margin"
                    android:layout_below="@id/notification_custom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/notification_vibrate_label"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                    <Switch
                        android:id="@+id/vibrate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/notification_light"
                    android:layout_marginTop="@dimen/sibling_horizontal_margin"
                    android:layout_below="@id/notification_vibrate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/notification_light_label"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                    <Switch
                        android:id="@+id/light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <android.support.percent.PercentRelativeLayout
                    android:id="@+id/notification_sound"
                    android:layout_marginTop="@dimen/sibling_horizontal_margin"
                    android:layout_below="@id/notification_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/sound"
                        android:text="@string/notification_sound_label"
                        android:layout_centerHorizontal="true"
                        app:layout_widthPercent="80%"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </android.support.percent.PercentRelativeLayout>

                <TextView
                    android:id="@+id/custom_values_label"
                    android:text="@string/custom_snooze_label"
                    android:layout_below="@id/notification_sound"
                    android:layout_marginTop="@dimen/sibling_big_horizontal_margin"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <FrameLayout
                    android:id="@+id/custom_alarm_fragment_container"
                    android:layout_below="@id/custom_values_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </FrameLayout>
            </RelativeLayout>
        </ScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/save_and_close"
            android:layout_marginBottom="@dimen/normal_item_vertical_padding"
            android:layout_marginRight="@dimen/normal_item_vertical_padding"
            android:layout_marginEnd="@dimen/normal_item_vertical_padding"
            android:layout_gravity="end|right"
            android:src="@drawable/ic_save_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>