<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/toolbar_appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true" >

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:contentInsetLeft="@dimen/toolbarInset"
                app:contentInsetStart="@dimen/toolbarInset"
                app:layout_scrollFlags="scroll|enterAlways"
                app:theme="@style/Toolbar"
                app:popupTheme="@style/ToolbarPopup">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:fillViewport="true"
            xmlns:tools="http://schemas.android.com/tools">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/MaterialContainer">
                <TextView
                    android:id="@+id/information_title_line"
                    android:text="@string/app_name"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/version_and_build"
                    android:layout_gravity="center_vertical"
                    tools:text="1.0 (13)"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>
                <TextView
                    android:id="@+id/information_feedback_line"
                    android:text="@string/information_feedback_line_html"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>
                <TextView
                    android:id="@+id/information_privacy_line"
                    android:text="@string/information_privacy_line_html"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>
                <TextView
                    android:id="@+id/information_icons_line"
                    android:text="@string/information_icons_line_html"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>
                <android.support.v4.widget.Space
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>